--- a/jour1.html
+++ b/jour1.html
@@ -83,7 +83,7 @@ class: inverse, center, middle
  
 .pull-right[
  
-&gt; *Les données sont couramment comprises comme les matériaux bruts produits dans l’abstraction du monde en catégories, mesures et toute autre forme de représentation-nombres, caractères, symboles, images, sons, ondes électromagnétiques, bits qui constituent les fondations sur lesquelles l’information et le savoir sont créés.*
+##### Les données sont couramment comprises comme les matériaux bruts produits dans l’abstraction du monde en catégories, mesures et toute autre forme de représentation-nombres, caractères, symboles, images, sons, ondes électromagnétiques, bits qui constituent les fondations sur lesquelles l’information et le savoir sont créés.
 
 Cette définition est une des rares à s'extraire des discours entourant les données ou leurs infrastructures. L'auteur de cet ouvrage de référence en sociologie s'attache à définir précisément l'ontologie et l'épistémologie de la donnée.
 ]
@@ -133,7 +133,7 @@ Le volume des données créées et traitées ne cesse de croitre en même temps 
 ---
 class:inverse,middle,center
 
-# 2 - Origines historiques de l'open data
+# 2 - Histoire du mouvement de l'open data
 
 ---
 ### .red[Open data] : un terme récent
@@ -144,20 +144,35 @@ C’est en 1995 qu’on en voit le premier usage public aux Etats-Unis dans un r
 
 ---
 
-### Que signifie .red[“Open”] dans un contexte culturel ?
+### Open data, les débuts : 
 
-* **L’Open Content** (les contenus ouverts) est la mise à disposition gratuite sur Internet des reproductions numériques des œuvres sous une licence garantissant leur libre accès et leur réutilisation par tous, sans restriction technique, juridique ou financière.
+Au début des années 2010, c’est dans le cadre d’un .red[mouvement international] que l’ouverture des données publiques connaît en France un nouvel élan. L’initiative vient du monde anglo-saxon, **les États-Unis et le Royaume-Uni mettant en place au même moment des plateformes gouvernementales de partage des données
+publiques, dans une démarche dite d’open data**. 
 
-* **L’Open Access** (le libre accès) est la mise à disposition en ligne de contenus numériques, soit sous licences libres (Creative commons, etc.), soit sous un des régimes de propriété intellectuelle. L’Open Access est principalement utilisé pour les articles de revues de recherche universitaires.
+Les objectifs de ce mouvement d’ouverture des données publiques sont à la fois :
 
-* **L’Open Knowledge** (la culture libre) est un mouvement social qui promeut la liberté de distribuer et de modifier des œuvres de l’esprit sous la forme d’œuvres libres. Il puise sa philosophie dans celle du logiciel libre en l’appliquant à la culture et à l’information.
+* .red[citoyens] : une plus grande transparence de l’action publique garantit un meilleur contrôle démocratique
+* .red[économiques] : les données de l’administration peuvent être le support de nombreuses activités économiques et devraient être diffusées aussi largement que possible. 
 
-* **L’Open Data** (les données ouvertes), est la mise à disposition gratuite sur Internet des données (comme les métadonnées qui accompagnent une image, les données statistiques, mais aussi les images ou vidéos), sous réserve que des tiers ne détiennent pas des droit de propriété intellectuelle sur ces informations.
+Le contexte est alors marqué par l’essor considérable des technologies et de l’économique numérique.
 
 ---
 class: inverse, center, middle
 
 ## L'open data s'inscrit dans une série de continuités historiques qui en font un **mouvement aux multiples facettes…**
+
+---
+
+### L'influence de la .red[culture du logiciel libre]
+
+&gt; Le mouvement de l'open data est largement **influencé par le mouvement du logiciel libre** qui lui précède de quelques décennies, et dont les créateurs et activistes participèrent à en dessiner les contours, notamment en 2007, lors de la conférence de Sébastopol sur laquelle nous reviendrons. 
+
+* **Comment ?**
+
+* Historiquement venu des pratiques des chercheurs en informatique des années 70-80, le partage d'information, de données et un modèle de la recherche scientifique de l'époque. 
+* À partir de 1980, des licences d'utilisation des logiciels prévues pour limiter la liberté de l'utilisateur apparaissent.
+* 1983 : Réaction d'un chercheur du MIT (Richard Stallman) avec le projet GNU (GNU's Not Unix) – le logiciel, une forme de connaissance scientifique, qui doit être partagée – formalise le concept de Logiciel Libre 
+* 1985: Fondation pour le Logiciel Libre – rédaction de la General Public License, GPL 
 
 ---
 ### [.red[Facette n°1 :]](https://books.openedition.org/cdf/5005?lang=fr) la transparence
@@ -199,11 +214,85 @@ Désiloter l'administration et ouvrir l'innovation, collaborer avec la société
 .center[![modernisation des administrations](./img/modernisation.jpg)] 
 
 ---
-class: center, middle
 
-# Quelques dates jalon dans l'histoire mondiale de l'open data
+### Que signifie .red[“Open”] dans un contexte culturel ?
+
+* **L’Open Content** (les contenus ouverts) est la mise à disposition gratuite sur Internet des reproductions numériques des œuvres sous une licence garantissant leur libre accès et leur réutilisation par tous, sans restriction technique, juridique ou financière.
+
+* **L’Open Access** (le libre accès) est la mise à disposition en ligne de contenus numériques, soit sous licences libres (Creative commons, etc.), soit sous un des régimes de propriété intellectuelle.
+
+* **L’Open Knowledge** (la culture libre) est un mouvement social qui promeut la liberté de distribuer et de modifier des œuvres de l’esprit sous la forme d’œuvres libres. Il puise sa philosophie dans celle du logiciel libre en l’appliquant à la culture et à l’information.
+
+* **L’Open Data** (les données ouvertes), est la mise à disposition gratuite sur Internet de données .red[sous réserve que des tiers ne détiennent pas des droit de propriété intellectuelle sur ces informations.]
 
 ---
+
+class: inverse, center, middle
+
+# 3 - Les principaux enjeux de l'open data 
+
+---
+
+### .red[La transparence de la vie publique] et la participation citoyenne à l’action publique
+
+
+* Exemple avec les **Données essentielles des conventions de subvention**, année 2018
+
+&lt;img src="./img/donnees_conventions_subvention.png" height="300"/&gt;
+
+---
+
+### .red[ La participation citoyenne à l’action publique]
+
+* Exemple : le Grand Débat National, mars 2019
+
+
+![](./img/grand_debat.png)
+
+---
+
+### .red[L’efficacité de l’action publique] : amélioration de la qualité des services publics 
+
+* Exemple : .red[sauver des vies en mer] en prévenant les accidents maritimes
+
+![](./img/previ-sauvetage.png)
+
+---
+
+### Le développement de .red[l’attractivité des territoires]
+
+* Le portail .red[*DATAtourisme*]
+
+![](./img/DATAtourisme.jpg)
+
+---
+
+### Le soutien à .red[l’innovation économique et sociale]
+
+* Les données des **valeurs foncières** reprises par le site meilleurs agents, avril 2019
+
+![](./img/dvf_meilleurs_agents.png)
+
+
+---
+
+### Une opportunité en matière de .red[démocratisation culturelle et de transmission des savoirs]
+
+* Le projet **UrbanHist** à Toulouse
+
+.center[&lt;img src="./img/urbanhist.jpg" height="350"/&gt;]
+
+---
+class: inverse, center, middle
+
+# Origines historiques de l'open data en France et dans le monde
+
+---
+class: center, middle
+
+## Quelques dates jalon dans .red[l'histoire mondiale de l'open data]
+
+--- 
 ### 2005 : [L'Open Definition](https://opendefinition.org/)
 
 #### Une définition juridique des droits de l'usager d'un savoir ouvert
@@ -221,6 +310,8 @@ class: center, middle
 
 **Comment ?** En adoptant une déclaration définissant les grands principes de l'Open Government Data 
 
+Ces principes sont fondamentaux dans le futur développement de politiques nationales d’ouverture des données. 
+
 
 .center[&lt;img src="https://datactivist.coop/dataliteracy/img/photofamille.jpg" height="250"/&gt;]
 
@@ -234,7 +325,16 @@ class: center, middle
 ---
 ### Depuis 2010 : l'ère des classements
 
-**[Le baromètre international de l'Open Data](https://index.okfn.org/place/)** est un classement de référence, tout comme l'Open Data Index de l'Open Knowledge Foundation
+La France a très vite cherché à s’inscrire dans la dynamique de l'open data, non sans succès en termes de reconnaissance internationale : 
+
+* La France se classe ainsi quatrième selon le dernier classement (2016) de l’Open Data Index établi par l’Open Knowledge Foundation, derrière Taïwan, l’Australie et la Grande-Bretagne)
+
+* L’année 2016-2017, la France prend la présidence du Partenariat pour le gouvernement ouvert, une organisation internationale ayant pour objet de promouvoir une gouvernance co-construite entre citoyens et administrations et qui promeut l'ouverture des données comme outil d'information et de participation aux décisions publiques. (*Nous y reviendrons également*)
+
+
+---
+
+**[Le baromètre international de l'Open Data](https://index.okfn.org/place/)** est un classement de référence, tout comme l'Open Data Index de l'Open Knowledge Foundation, organisation internationale ayant pour objet de promouvoir la transparence des données publiques.
 
 ![baromètre international de l'Open Data](https://datactivist.coop/aaf/img/odb.png)
 
@@ -264,10 +364,10 @@ class: center, middle
 * **DINSIC - Etalab** : Crée en 2011, la mission coordonne la politique d’ouverture et de partage des données publiques, et anime la plateforme nationale data.gouv.fr 
 * **DITP** : Expérimente l’intelligence artificielle dans les administrations avec Etalab et la DINSIC
 * **DINSIC** : Soutient la diffusion de la culture numérique (utilisations des données, recours aux méthodes agiles) et la coopération avec la société civile et les écosystèmes innovants (open data, gouvernement ouvert). 
-* **Mission Société Numérique de l'Agence du Numérique** : Structure les acteurs de l’accompagnement au numérique (ou médiation numérique) et les stratégies numériques des territoires, dont l'open data fait partie.
+* **Mission Société Numérique de l'Agence du Numérique** : Structure les acteurs de l’accompagnement au numérique et les stratégies numériques des territoires, dont l'open data fait partie.
 
 Au ministère de la Culture :
-* **DIN** (Département de l'innovation numérique au Secrétariat général du Ministère) : chargé d’identifier les informations publiques du ministère et de ses établissements culturels produites dans le cadre des missions de service public, de coordonner le recensement, la qualification des informations publiques, et la mise à disposition des données ouvertes qui ont vocation à être librement accessibles et gratuitement réutilisables.
+* **DIN** (Département de l'innovation numérique) : chargé d’identifier au ministère et dans les établissements culturels, les informations produites dans le cadre des missions de service public, de coordonner leur recensement, leur qualification, et la mise à disposition en données ouvertes qui ont vocation à être librement accessibles et gratuitement réutilisables.
 
 ---
 
@@ -353,84 +453,40 @@ Cela implique la création d’une page dédiée à l'établissement, puis la pu
 &gt; **Le ministère mettra en place les mécanismes nécessaires pour que toutes les données publiées de cette façon soient ensuite automatiquement visibles sur data.culture.gouv.fr.**
 
 ---
+
+### Culture : trois types de données .red[concernées par l’ouverture]  
+
+* 1 - Les données statistiques et économiques des institutions culturelles (fréquentation, recettes, subventions, etc. ) ; 
+* 2 - Les métadonnées culturelles, c’est-à dire les notices bibliographiques et plus largement les données associées aux œuvres (localisation ; description ; auteur ; œuvres associées ; prix ; propriétaire) ; 
+* 3 - Les fichiers images et copies numériques des œuvres **entrées dans le domaine public**. 
+
+
+---
 class: inverse, center, middle
 
-### Exercice : Créer votre première datavisualisation avec les données de data.culture.gouv.fr ! 
-
----
-
-class: inverse, center, middle
-
-# 3. Les principaux enjeux de l'open data 
-
----
-
-### .red[La transparence de la vie publique] et la participation citoyenne à l’action publique
-
-
-* Exemple avec les **Données essentielles des conventions de subvention**, année 2018
-
-![](./img/donnees_conventions_subvention.png)
-
----
-
-### .red[ La participation citoyenne à l’action publique]
-
-* Exemple : le Grand Débat National, mars 2019
-
-
-![](./img/grand_debat.png)
-
----
-
-### .red[L’efficacité de l’action publique] : amélioration de la qualité des services publics 
-
-* Exemple : .red[sauver des vies en mer] en prévenant les accidents maritimes
-
-![](./img/previ-sauvetage.png)
-
----
-
-### Le développement de .red[l’attractivité des territoires]
-
-* Le portail .red[*DATAtourisme*]
-
-![](./img/DATAtourisme.jpg)
-
----
-
-### Le soutien à .red[l’innovation économique et sociale]
-
-* Les données des **valeurs foncières** reprises par le site meilleurs agents, avril 2019
-
-![](./img/dvf_meilleurs_agents.png)
-
-
----
-
-### Une opportunité en matière de .red[démocratisation culturelle et de transmission des savoirs]
-
-* Le projet **UrbanHist** à Toulouse
-
-.center[&lt;img src="./img/urbanhist.jpg" height="350"/&gt;]
+### Exercice : Créer votre première datavisualisation avec les données de data.culture.gouv.fr  
 
 ---
 
 class: inverse, center, middle
 
-# 4. Éléments juridiques et principes d'ouverture des données 
-
-.footnote[D'après les "eight principles of open government data" définis les 7-8 décembre 2007 à Sébastopol. Source: [opengovdata.org](https://opengovdata.org/)]
+# Éléments juridiques relatifs à l'ouverture des données
 
 ---
 
-class: center, middle
+### .red[Droit d’ouverture des données publiques] en France
 
-### La loi CADA : fondement de la transparence administrative
+Trois grandes étapes peuvent être mises en évidence dans la **construction d’un droit de l’ouverture des données publiques** : 
+
+* 1 - La création du droit d’accès aux documents administratifs 
+* 2 - La création du droit de réutilisation des informations publiques
+* 3 - Le développement d’une politique active d’ouverture des données, assorti d’un essor de la gratuité. 
+
+Dans chacune de ces étapes, la France s’est inscrite dans un mouvement international, au sein duquel elle a cherché à occuper les premières places.
+
+
 ---
-
 ### Un appareil législatif .red[étoffé]
-
 
 
 1. **Loi CADA**, dite Loi Informatique et Libertés du 6 janvier 1978.
@@ -449,15 +505,15 @@ class: center, middle
 
 ---
 
-### Frise chronologique de l'évolution du .red[cadre législatif] en France
+### Frise chronologique de l'évolution du .red[cadre législatif] français
 
-<div id="htmlwidget-a4a078a3293febc6e537" class="timevis html-widget" style="width:715px;height:350px;">
+<div id="htmlwidget-a652e87e5dd49de4ba2f" class="timevis html-widget" style="width:715px;height:350px;">
 <div class="btn-group zoom-menu">
 <button type="button" class="btn btn-default btn-lg zoom-in" title="Zoom in">+</button>
 <button type="button" class="btn btn-default btn-lg zoom-out" title="Zoom out">-</button>
 </div>
 </div>
-<script type="application/json" data-for="htmlwidget-a4a078a3293febc6e537">{"x":{"items":[{"id":"1","content":"Loi CADA","start":"1978-07-17"},{"id":"2","content":"Directive PSI","start":"2003-11-17"},{"id":"3","content":"Directive INSPIRE","start":"2007-03-14"},{"id":"4","content":"Révision de la directive PSI","start":"2013-06-13"},{"id":"5","content":"Loi Notre","start":"2015-08-07"},{"id":"6","content":"Loi Valter","start":"2015-12-28"},{"id":"7","content":"Loi pour une République Numérique","start":"2016-10-07"}],"groups":null,"showZoom":true,"zoomFactor":0.5,"fit":true,"options":[],"height":"350px","api":[]},"evals":[],"jsHooks":[]}</script>
+<script type="application/json" data-for="htmlwidget-a652e87e5dd49de4ba2f">{"x":{"items":[{"id":"1","content":"Loi CADA","start":"1978-07-17"},{"id":"2","content":"Directive PSI","start":"2003-11-17"},{"id":"3","content":"Directive INSPIRE","start":"2007-03-14"},{"id":"4","content":"Révision de la directive PSI","start":"2013-06-13"},{"id":"5","content":"Loi Notre","start":"2015-08-07"},{"id":"6","content":"Loi Valter","start":"2015-12-28"},{"id":"7","content":"Loi pour une République Numérique","start":"2016-10-07"}],"groups":null,"showZoom":true,"zoomFactor":0.5,"fit":true,"options":[],"height":"350px","api":[]},"evals":[],"jsHooks":[]}</script>
 
 ---
 
@@ -470,6 +526,29 @@ class: center, middle
 
 .footnote[Il faudrait maintenant désigner la loi comme le Code des relations entre le public et l'administration (CRPA) qui, dans son [livre 3](https://www.legifrance.gouv.fr/affichCode.do;jsessionid=BDF8EC0BD562E214CCD9A5ADD435D690.tplgfr42s_1?idSectionTA=LEGISCTA000031367685&amp;cidTexte=LEGITEXT000031366350&amp;dateTexte=20190429), codifie le droit d'accès et de réutilisation mais il est encore moins connu que la loi CADA…]
 
+---
+
+### La création du .red[droit de réutilisation des informations publiques] avec la Directive ISP/PSI
+
+Partant du constat que le secteur public produit et diffuse un grand nombre d’informations et qu'elles « constituent une matière première importante pour les produits et services de contenu numérique », la directive PSI de 2003 concernant la réutilisation des informations du secteur public se fonde sur des considérations économiques. .red[**Elle introduit la notion de réutilisation commerciale et non-commerciale.**]
+
+En France, elle est transposée par l'ordonnance du 6 juin 2005, qui insère dans la loi CADA de 1978 un nouveau chapitre relatif à la réutilisation des informations publiques.
+
+---
+
+### Le .red[droit de réutilisation des informations publiques] 
+
+Le droit de réutilisation issu de la directive PSI *se combine donc en France avec le droit d’accès aux documents administratifs* reconnu depuis 1978 : les informations contenues dans tout document administratif communicable sont, en principe, réutilisables « _par toute personne qui le souhaite à d'autres fins que celles de la mission de service public pour les besoins de laquelle les documents ont été élaborés ou sont détenus_ ». 
+
+&gt; Par cette combinaison, le droit français garantit ainsi une liberté effective de réutilisation bien plus grande que celle imposée par la directive ISP. Le principal apport de la transposition au droit français est d’avoir mis fin à l’interdiction de réutilisation des documents administratifs à des fins commerciales.
+
+---
+
+class: inverse, center, middle
+
+# Prenons maintenant connaissance des principes généraux d'ouverture des données 
+
+.footnote[Tels que définis dans les "huit principes des données publiques ouvertes", définis les 7-8 décembre 2007 lors de la rencontre Sébastopol, citée plus haut. Source: [opengovdata.org](https://opengovdata.org/)]
 
 ---
 class: center, middle
