Détails forme jour 2 Cecile

--- a/jour2.html
+++ b/jour2.html
@@ -369,7 +369,7 @@ class: inverse, center, middle
 ### Étape 3 : .red[Diffuser et valoriser] les données
 
 #### Rendre les données découvrables
-#### Automatisation de la mise à jour des jeux de données
+#### Soigner les métadonnées
 #### Mettre en place une API pour diffuser des données
 
 ---
@@ -515,6 +515,17 @@ En petits groupes, analysez les [données brutes](https://docs.google.com/spread
 class: inverse, center, middle
 
 # Animer et valoriser les réutilisations 
+
+---
+
+class: middle
+
+### Étape 3 : .red[Animer et valoriser] les réutilisations
+
+* #### Verser une collection sur une plateforme collaborative
+* #### Animer et acculturer une communauté de réutilisateurs
+* #### Susciter les réutilisations avec un programme de partenariats
+
 
 ---
 
